# gpu-compute-ray-trace

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  extern.h  fwd_decl.h  log.h  main.comp  main.cpp  renderer.h  shader.h  shader_program.h  utility.h
src/shaders/: CMakeLists.txt  quad.frag  quad.vert
